--- a/.github/workflows/release-scheduled.yaml
+++ b/.github/workflows/release-scheduled.yaml
@@ -20,7 +20,7 @@ on:
         default: false
         required: true
   schedule:
-    - cron: "0 * * * *"
+    - cron: "13 4 * * *"
 
 jobs:
   simple-checks:
